# hls-proxy

./: .gitignore  README.md  SUPPORTED.md  pyproject.toml
.agents/: AGENTS.md
hlsproxy/: __init__.py  __main__.py  cli.py  models.py
hlsproxy/core/: __init__.py  player.py  proxy.py  proxy_delegate.py  session.py
hlsproxy/resolvers/: __init__.py  base.py  generic.py  gooz.py  jwplayer.py  vidtube.py  vidwish.py
openwiki/: .last-update.json  quickstart.md
openwiki/architecture/: models.md  proxy-server.md  resolvers.md
openwiki/development/: development.md
openwiki/workflows/: usage.md
tests/: test_cli.py  test_models.py  test_proxy.py  test_resolvers.py  test_session.py
