[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hlsproxy"
version = "0.1.0"
description = "A local HTTP proxy to extract and play HLS streams directly in mpv"
requires-python = ">=3.8"
dependencies = [
    "curl_cffi>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
hlsproxy = "hlsproxy.cli:main"

[tool.setuptools.packages.find]
include = ["hlsproxy*"]
